Probably got the dark/light transition fixed by forcing body to consume full viewport, using fixed position, and putting svg on default z-index

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,20 +4,21 @@
 
 .main {
   min-height: 100vh;
-  padding: 0rem 0;
+  padding: 0;
+  margin: 0;
   flex: 1;
   position: absolute;
   top: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  z-index: -1;
+
 }
 
 @media (min-width: 768px) {
   .main {
-    overflow: hidden;
+    overflow-y: hidden;
+    position: fixed;
   }
 }
 
@@ -84,6 +85,7 @@
   top: 0;
   left: 0;
   padding: 0.5rem;
+  z-index: 99;
 }
 
 .title,
@@ -128,6 +130,7 @@
   padding: 0.5rem;
   top: 0;
   right: 0;
+  z-index: 99;
 }
 
 .code {
