--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 1vh;
+  width: 1vw;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -9,7 +11,6 @@ body {
 body {
   height: 1.5vh;
   overflow-x: hidden;
-  overflow-y: auto;
 }
 
 a {
